crates/ast_to_bytecode/src/snapshots/ast_to_bytecode__tests__i32_lit_to_bytecode.snap
---
source: crates/ast_to_bytecode/src/lib.rs
assertion_line: 49
expression: "expr_to_bytecode(&Expr::I32Lit(Range::default(), 3))"

---
[
    I32Const(
        3,
    ),
]
