crates/ast_to_bytecode/src/snapshots/ast_to_bytecode__tests__print_i32_to_bytecode.snap
---
source: crates/ast_to_bytecode/src/lib.rs
assertion_line: 72
expression: bytecode

---
[
    I32Const(
        3,
    ),
    PrintI32,
]
