crates/ast_to_bytecode/src/snapshots/ast_to_bytecode__tests__print_str_to_bytecode.snap
---
source: crates/ast_to_bytecode/src/lib.rs
assertion_line: 82
expression: bytecode

---
[
    StrConst(
        "Hello, world!",
    ),
    PrintStr,
]
