crates/ast_to_bytecode/src/snapshots/ast_to_bytecode__tests__str_lit_to_bytecode.snap
---
source: crates/ast_to_bytecode/src/lib.rs
assertion_line: 54
expression: "expr_to_bytecode(&Expr::StrLit(range!(0 ; 0, 0 ; 4), \"Hello\".to_owned()))"

---
[
    StrConst(
        "Hello",
    ),
]
